force-app/main/default/objects/Order__c/Order__c.object-meta.xml
<CustomObject>
    <label>Pedido</label>
    <nameField>
        <label>Nome de Pedido</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pedidos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>