force-app/main/default/objects/Order__c/fields/ModoDePagamento__c.field-meta.xml
<CustomField>
    <fullName>ModoDePagamento__c</fullName>
    <label>Modo de Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cartão</fullName>
            </value>
            <value>
                <fullName>PIX</fullName>
            </value>
            <value>
                <fullName>Vale Refeição/Vale Alimentação</fullName>
            </value>
            <value>
                <fullName>Dinheiro</fullName>
            </value>
            <value>
                <fullName>Voucher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>