force-app/main/default/objects/Order__c/fields/ValorTotalPedido__c.field-meta.xml
<CustomField>
    <fullName>ValorTotalPedido__c</fullName>
    <label>Valor Total do Pedido</label>
    <summarizedField>OrderItem__c.valorItem__c</summarizedField>
    <summaryForeignKey>OrderItem__c.Pedido__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>